# feedomap

./: .gitignore  README.md  feedomap.py  setup.cfg
feedomap/: __init__.py  cache.py  config.py  constants.py  feed.py  imap.py  main.py  utils.py
feedomap/lib/: __init__.py  cache.py  config.py  constants.py  feed.py  imap.py  main.py  utils.py
src/feedomap/: __init__.py  constants.py  feed.py  imap.py  main.py  utils.py
