[metadata]
name = feedomap
version = attr: feedomap.__version__
author = attr: feedomap.__author__
author_email = attr: feedomap.__email__
description = attr: feedomap.__description__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/godlike64/feedomap
project_urls =
    Bug Tracker = https://github.com/godlike64/feedomap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    requests
    feedparser

[options.entry_points]
console_scripts = 
    feedomap = feedomap.main:main

[options.packages.find]
where = src